<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurroActivity">

    <Button
        android:id="@+id/exit"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/material_dynamic_primary10"
        android:padding="20dp"
        android:text="@string/salir"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092">

        <TextView
            android:id="@+id/textView"
            android:background="@drawable/back"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.092" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout0"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout0"
        >

        <Button
            android:backgroundTint="@color/material_dynamic_primary80"
            android:id="@+id/num1"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="207dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:backgroundTint="@color/material_dynamic_primary80"
            android:id="@+id/num2"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="75dp"
            tools:layout_editor_absoluteY="475dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:backgroundTint="@color/material_dynamic_primary80"
            android:id="@+id/num3"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="230dp"
            tools:layout_editor_absoluteY="498dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:backgroundTint="@color/material_dynamic_primary80"
            android:id="@+id/num4"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="207dp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
        app:layout_constraintStart_toStartOf="@+id/linearLayout1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        >


        <Button
            android:backgroundTint="@color/material_dynamic_primary80"
            android:id="@+id/num5"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="75dp"
            tools:layout_editor_absoluteY="475dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:backgroundTint="@color/material_dynamic_primary80"
            android:id="@+id/num6"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="230dp"
            tools:layout_editor_absoluteY="498dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:backgroundTint="@color/material_dynamic_primary80"
            android:id="@+id/num7"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="207dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:backgroundTint="@color/material_dynamic_primary80"
            android:id="@+id/num8"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="75dp"
            tools:layout_editor_absoluteY="475dp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
        app:layout_constraintStart_toStartOf="@+id/linearLayout1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:padding="5dp">

        <Button
            android:backgroundTint="@color/material_dynamic_primary80"
            android:id="@+id/num9"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="230dp"
            tools:layout_editor_absoluteY="498dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:backgroundTint="@color/material_dynamic_primary80"
            android:id="@+id/num0"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="207dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:backgroundTint="@color/material_dynamic_primary80"
            android:id="@+id/dot"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="230dp"
            tools:layout_editor_absoluteY="498dp"
            style="?android:attr/buttonBarButtonStyle"/>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
        app:layout_constraintStart_toStartOf="@+id/linearLayout1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:backgroundTint="@color/material_dynamic_primary10"
            android:id="@+id/plus"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="60sp"
            android:textColor="@color/material_dynamic_primary80"
            tools:layout_editor_absoluteX="75dp"
            tools:layout_editor_absoluteY="475dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:backgroundTint="@color/material_dynamic_primary10"
            android:id="@+id/minus"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textSize="60sp"
            android:textColor="@color/material_dynamic_primary80"
            tools:layout_editor_absoluteX="230dp"
            tools:layout_editor_absoluteY="498dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:backgroundTint="@color/material_dynamic_primary10"
            android:id="@+id/multiply"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:textSize="60sp"
            android:textColor="@color/material_dynamic_primary80"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="207dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:backgroundTint="@color/material_dynamic_primary10"
            android:id="@+id/divide"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:textSize="60sp"
            android:textColor="@color/material_dynamic_primary80"
            tools:layout_editor_absoluteX="75dp"
            tools:layout_editor_absoluteY="475dp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
        app:layout_constraintStart_toStartOf="@+id/linearLayout1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        android:padding="5dp">


        <Button
            android:id="@+id/del"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/material_dynamic_primary10"
            android:text="@string/del"
            android:textSize="60sp"
            android:textColor="@color/material_dynamic_primary80"
            tools:layout_editor_absoluteX="206dp"
            tools:layout_editor_absoluteY="640dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/ce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/material_dynamic_primary10"
            android:text="@string/ce"
            android:textSize="60sp"
            android:textColor="@color/material_dynamic_primary80"
            tools:layout_editor_absoluteX="206dp"
            tools:layout_editor_absoluteY="640dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/equal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/material_dynamic_primary10"
            android:text="@string/equal"
            android:textSize="60sp"
            android:textColor="@color/material_dynamic_primary80"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="640dp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>